deleted image from carousel, verkoop & verhuur are responsive, bug: carousel not scaling properly on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,10 +16,6 @@ body {
     display: flex;
     justify-content: space-around;
 }
-.container {
-    width: 100%;
-    height: auto;
-}
 
 /*header & nav*/
 header {
@@ -68,6 +64,7 @@ nav {
 /*carousel*/
 .carousel-container{
     width: 100%;
+    height: auto;
     margin: auto;
     overflow: hidden;
     position: relative;
@@ -75,10 +72,10 @@ nav {
 .carousel-slide{
     display: flex;
     width: 100%;
-    max-height: 800px;
+    height: auto;
 }
 .carousel-slide img{
-    max-width: 100vw;
+    width: 100%;
     height: auto;
 }
 #prevBtn {
@@ -200,7 +197,7 @@ main {
     width: 40%;
 }
 
-/* collumn1/2 pageitems */
+/* pageitems */
 .imageItem {
     background-color: #E30614;
     padding: 0.5%;
@@ -213,9 +210,22 @@ main {
     padding: 1%;
     background-color: #005da9;
 }
-
 .itemTitle, .collumn1-2 p {
     margin: 1em 0.25em 1em 0.25em;
+}
+
+/*verhuur & verkoop*/
+.verhuurItem, .verkoopItem {
+    align-items: flex-start;
+}
+@media screen and (max-width: 800px) {
+    .verhuurItem, .verkoopItem {
+        flex-direction: column;
+        align-items: center;
+    }
+    .verhuurItem .collumn1-2, .verkoopItem .collumn1-2{
+        width: 80%;
+    }
 }
 
 /*lists*/
